--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^4.1.1",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "sass": "^1.92.1",
+    "scss": "^0.2.4"
   }
 }
