--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.11.4",
     "nuxt": "^4.1.1",
     "nuxt-svgo": "^4.2.6",
     "pinia": "^3.0.3",
